--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 # Compiler
 
-Kildekode for dette er i et privat repository, denne kan fremvises ved ønske.
+Kildekode for dette er i et privat repository, denne kan fremvises om ønskelig.
 
